@@ -1,5 +1,6 @@
 0.03
 - Fix length of #-----... to 80 chars.
+- Add enumerating of lines.
 
 0.02 (July, 16, 2012)
 - Add doc for pod_example script.
